--- a/styles/main.css
+++ b/styles/main.css
@@ -92,13 +92,6 @@ main {
   grid-row: 2 / 3;
 }
 
-footer {
-  background-color: #333;
-  color: white;
-  padding: 10px;
-  grid-row: 3 / 4;
-}
-
 /* BANNER */
 
 .banner {
@@ -379,8 +372,20 @@ footer {
 
 /********** FOOTER ***********/
 
+h3,
+h4 {
+  color: #41c406;
+}
+
+h3 {
+  margin-bottom: 2rem;
+}
+
 footer {
-  padding: 1rem 0;
+  grid-row: 3 / 4;
+  background-color: #333;
+  color: white;
+  padding: 3rem 0 1rem;
   height: 7;
   position: relative;
   bottom: 0;
@@ -388,19 +393,26 @@ footer {
   /* background-color: transparent; */
 }
 
-footer .content {
-  display: block;
-  margin-top: 1rem;
-  text-align: center;
-  padding-bottom: 0;
+.footer-container {
+  display: flex;
+  flex-direction: column;
 }
 
 footer a {
   font-size: 1.2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
   color: #c2c3c9;
+  margin-bottom: 1rem;
 }
 
-footer .instagram:hover {
+footer .redes i {
+  margin-right: 2rem;
+}
+
+footer .instagram {
   color: #d02c85 !important;
 }
 
@@ -408,7 +420,18 @@ footer .whatsapp:hover {
   color: #42bc50 !important;
 }
 
-footer .linkedin:hover {
+footer .linkedin {
+  color: #0c60b8 !important;
+}
+
+footer .facebook {
+  color: #005095 !important;
+}
+
+footer .youtube {
+  color: #c4302b;
+}
+/* footer .linkedin:hover {
   color: #0c60b8 !important;
 }
 
@@ -418,10 +441,49 @@ footer .facebook:hover {
 
 footer .youtube:hover {
   color: #c4302b;
-}
+} */
 
 footer ul {
   margin: 0;
+}
+
+.contact-item {
+  display: flex;
+  text-align: center;
+}
+
+.contact-item p {
+  margin-bottom: 0.3rem;
+}
+
+.gmap {
+  width: 40%;
+  height: 8rem;
+}
+
+.embed-responsive-item {
+  width: 100%;
+  height: 100%;
+}
+
+footer .img-desktop,
+footer .img-responsive {
+  width: 10rem;
+  height: 10rem;
+}
+
+.img-responsive-container {
+  margin-top: 2rem;
+  display: flex;
+  justify-content: center;
+}
+
+footer .img-desktop {
+  display: none;
+}
+
+footer .img-responsive {
+  display: inline-block;
 }
 
 @media (min-width: 768px) {
@@ -433,5 +495,22 @@ footer ul {
   .contact-container {
     padding: 11rem 0 0;
     flex-direction: row;
+  }
+
+  .footer-container {
+    flex-direction: row;
+  }
+
+  .img-responsive-container {
+    display: none;
+  }
+
+  footer .img-desktop {
+    display: inline-block;
+    margin-top: 2rem;
+  }
+
+  footer .img-responsive {
+    display: none;
   }
 }
